# 7-Day-AI-Agents-Crash-Course

./: .gitignore  Day1.ipynb  Day2.ipynb  README.md  app.py  data.py  data_generation.py  evaluation.py  generate_questions.py  generated_questions.json  logs.py  main.py  pyproject.toml  requirements.txt  run_evaluation.py  search.py  search_agent.py  search_tools.py  test_groq.py
.ipynb_checkpoints/: Day1-checkpoint.ipynb  Day2-checkpoint.ipynb  Untitled-checkpoint.ipynb  main-checkpoint.py
logs/: None_20260328_212054_b793ec.json  None_20260328_212116_924e7f.json  agent_20260327_232026_13ab85.json  agent_20260327_232036_ebd9c5.json  agent_20260327_232051_5fc4fa.json  agent_20260327_233509_2b504a.json  agent_20260327_233526_d802e5.json  agent_20260327_234927_695094.json  agent_20260327_234927_c45f03.json  agent_20260327_234927_e6552d.json  faq_agent_20260328_222751_975a1b.json  faq_agent_20260328_222758_50e9e7.json  faq_agent_20260328_223549_9d6c73.json  faq_agent_20260328_223604_483150.json  faq_agent_20260328_223619_78f86b.json  faq_agent_20260328_223631_6837b9.json  faq_agent_20260328_223638_1fce69.json  faq_agent_20260328_223642_57551a.json  faq_agent_20260328_223740_740034.json  faq_agent_20260328_223753_b54ed7.json  faq_agent_20260328_223758_60bc47.json
